Exclude Arabic numeric formatting characters from IS_ARABIC_ALPHABETIC. Bug 438571, r=Ehsan Akhgari <ehsan.akhgari@gmail.com>